# compactlauncher

./: README.md
src/: CMakeLists.txt  app.rc  discord_rpc.h  download_manager.cpp  download_manager.h  downloader_dialog.cpp  downloader_dialog.h  json_parser.h  launcher.h  main.cpp  main_frame.cpp  main_frame.h  settings_dialog.cpp  settings_dialog.h  utils.cpp  version_parser.h
